--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "Bj Tecu (https://github.com/btecu)",
     "Brent McSharry (https://github.com/mcshaz)",
     "Tim Knapp (https://github.com/duffyd)",
-    "Ching Chang (https://github.com/ChingChang9)"
+    "Ching Chang (https://github.com/ChingChang9)",
+    "Remus DRAICA (https://github.com/remdra)"
   ],
   "scripts": {
     "release:latest": "yarn publish --tag latest && yarn pack && yarn release:tag",
