--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "pdf-lib-incremental-save",
-  "version": "1.17.1",
-  "description": "add incremental save functionality to pdf-lib.",
-  "author": "Remus DRAICA <remus.draica@gmail.com>",
+  "name": "@cincel.digital/pdf-lib",
+  "version": "0.1.0",
+  "description": "fix some problems of Remdra's add incremental save functionality to pdf-lib (1.17.1).",
+  "author": "Hector Ornelas <hector@cincel.digital>",
   "contributors": [
     "jerp (https://github.com/jerp)",
     "Greg Bacchus (https://github.com/gregbacchus)",
@@ -30,7 +30,8 @@
     "Brent McSharry (https://github.com/mcshaz)",
     "Tim Knapp (https://github.com/duffyd)",
     "Ching Chang (https://github.com/ChingChang9)",
-    "Remus DRAICA (https://github.com/remdra)"
+    "Remus DRAICA (https://github.com/remdra)",
+    "Hector Ornelas (https://github.com/ornelash)"
   ],
   "scripts": {
     "release:latest": "yarn publish --tag latest && yarn pack && yarn release:tag",
